<resources>
    <string name="app_name">ProjetSuper</string>
    <string name="titre_liste">Liste des Super-héros</string>
    <string name="affichage_hero">Affiche du héro</string>
    <string name="intelligence">Intelligence</string>
    <string name="force">Force</string>
    <string name="vitesse">Vitesse</string>
    <string name="durabilite">Durabilité</string>
    <string name="pouvoir">Pouvoir</string>
    <string name="combat">Combat</string>
    <string name="race">Race</string>
    <string name="genre">Genre</string>
    <string name="travail">Travail :</string>
    <string name="recherche_id">Rechercher avec l\'id</string>
    <string name="recherche_id_edittext">Mettre un nombre de 1 à 732</string>
    <string name="recherche_string">Rechercher avec une partie du nom</string>
    <string name="recherche_string_edittext">Veuillez rentrer une partie du nom de héro</string>
    <string name="recherche_button">Rechercher</string>
    <string name="recherche_internet">Rechercher le nom du héro sur internet</string>
    <string name="titre_nom">Nom</string>
    <string name="titre_nom_complet">Nom Complet</string>
    <string name="titre_button">Accèder à la \nfiche du héro</string>
    <string name="rechercher_hero">Recherche Héro</string>
    <string name="tierlist">Tier List</string>
    <string name="database">DataBase</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier">Modifier</string>
    <string name="creation_hero">Création d\'un héro</string>
    <string name="creation_votre_hero">Création de votre héro</string>
    <string name="switch_parametre">Modification du thème clair/sombre</string>
    <string name="nomcreateur">© Maury Corentin, Michaud Thomas</string>
    <string name="tierlist1">Tierlist des héros de Marvel</string>
    <string name="tierlist2">Tierlist des héros de DC comics</string>
    <string name="go">GO</string>

</resources>