<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2">

    <TableRow>
        <TextView
            android:gravity="center"
            android:text="@string/titre_nom">
        </TextView>
        <TextView
            android:gravity="center"
            android:text="@string/titre_nom_complet">
        </TextView>
        <TextView
            android:id="@+id/titre_button"
            android:gravity="center"
            android:text="@string/titre_button">
        </TextView>
    </TableRow>
    </TableLayout>
    </ScrollView>

</LinearLayout>